feat: complete I2 hamsters enclosures csv import
